Update resume, about, etc

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,7 @@
 @article{Bizheva2016,
 author = {Bizheva, K. and Haines, L. and Mason, E. and MacLellan, B. and Tan, B. and Hileeto, D. and Sorbara, L.},
 doi = {10.1167/iovs.15-18936},
+html = {https://iovs.arvojournals.org/article.aspx?articleid=2524817},
 issn = {15525783},
 journal = {Investigative Ophthalmology and Visual Science},
 keywords = {Cornea,Descemet's membrane,Dua's layer,Endothelium,Optical coherence tomography,Pre-Descemet's layer},
@@ -13,6 +14,7 @@ year = {2016},
 @article{Bizheva2017,
 author = {Bizheva, K. and Tan, B. and MacLellan, B. and Hosseinaee, Z. and Mason, E. and Hileeto, D. and Sorbara, L.},
 doi = {10.1364/BOE.8.004141},
+html = {https://opg.optica.org/boe/fulltext.cfm?uri=boe-8-9-4141&id=370747},
 issn = {21567085},
 journal = {Biomedical Optics Express},
 keywords = {Imaging systems,Medical and biological imaging,Medical optics instrumentation,Optical coherence tomography},
@@ -22,21 +24,10 @@ volume = {8},
 year = {2017}
 }
 
-@article{doi:10.1167/iovs.15-18936,
-author = {Bizheva, Kostadinka and Haines, Lacey and Mason, Erik and MacLellan, Benjamin and Tan, Bingyao and Hileeto, Denise and Sorbara, Luigina},
-doi = {10.1167/iovs.15-18936},
-journal = {Investigative Ophthalmology {\&} Visual Science},
-number = {6},
-pages = {2782},
-title = {In-vivo imaging and morphometry of the human pre-Descemet's layer and endothelium With ultrahigh-resolution optical coherence},
-url = {doi.org/10.1167/iovs.15-18936},
-volume = {57},
-year = {2016}
-}
-
 @article{Tan2017,
 author = {Tan, B. and MacLellan, B. and Mason, E. and Bizheva, K.K.},
 doi = {10.1167/iovs.17-22412},
+html = {https://iovs.arvojournals.org/article.aspx?articleid=2660088},
 issn = {15525783},
 journal = {Investigative Ophthalmology and Visual Science},
 keywords = {Doppler optical coherence tomography,Intraocular pressure,Neurovascular coupling,Retina imaging},
@@ -52,12 +43,14 @@ journal = {Journal of Visualized Experiment},
 pages = {136},
 title = {{Generation and coherent control of pulsed quantum frequency combs}},
 url = {doi:10.3791/57517},
+html = {https://www.jove.com/t/57517/generation-coherent-control-pulsed-quantum-frequency-combs-video},
 volume = {e57517},
 year = {2018}
 }
 @article{Tan2017a,
 author = {Tan, B. and Mason, E. and MacLellan, B. and Bizheva, K.K.},
 doi = {10.1167/iovs.17-21543},
+html = {https://iovs.arvojournals.org/article.aspx?articleid=2613127},
 issn = {15525783},
 journal = {Investigative Ophthalmology and Visual Science},
 keywords = {Doppler optical coherence tomography,Electroretinography,Functional imaging,Neurovascular coupling,Retinal imaging},
@@ -70,6 +63,7 @@ year = {2017}
 @article{Tan2018,
 author = {Tan, Bingyao and MacLellan, B. and Mason, Erik and Bizheva, Kostadinka},
 doi = {10.1371/journal.pone.0193592},
+html = {https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0193592},
 issn = {19326203},
 journal = {PLoS ONE},
 number = {3},
@@ -77,6 +71,7 @@ title = {{Structural, functional and blood perfusion changes in the rat retina a
 volume = {13},
 year = {2018}
 }
+
 @article{Zhang2020,
 	author = {Zhang, Yanbing and Kues, Michael and Roztocki, Piotr and Reimer, Christian and Fischer, Bennet and MacLellan, Benjamin and Bisianov, Arstan and Peschel, Ulf and Little, Brent E. and Chu, Sai T. and Moss, David J. and Caspani, Lucia and Morandotti, Roberto},
 	doi = {10.1002/lpor.202000128},
@@ -86,12 +81,13 @@ year = {2018}
 	number = {9},
 	pages = {2000128},
 	title = {{Induced photon correlations through the overlap of two four‐wave mixing processes in integrated cavities}},
-	url = {https://onlinelibrary.wiley.com/doi/10.1002/lpor.202000128},
+	html = {https://onlinelibrary.wiley.com/doi/10.1002/lpor.202000128},
 	volume = {14},
 	year = {2020}
 }
 
 @article{Roztocki2021,
+  selected={true},
 	author = {Roztocki, Piotr and MacLellan, Benjamin and Islam, Mehedi and Reimer, Christian and Fischer, Bennet and Sciara, Stefania and Helsten, Robin and Jestin, Yoann and Cino, Alfonso and Little, Brent and Chu, Sai and Moss, David J. and Kues, Michael and Morandotti, Roberto},
 	title = {Arbitrary phase access for stable fiber interferometers},
 	doi = {10.1002/lpor.202000524},
@@ -99,12 +95,13 @@ year = {2018}
 	issue = {15},
 	pages = {2000524},
 	month = {July},
-	url = {https://opg.optica.org/optica/fulltext.cfm?uri=optica-8-10-1268&id=459971},
+	html = {https://opg.optica.org/optica/fulltext.cfm?uri=optica-8-10-1268&id=459971},
 	volume = {7},
 	year = {2021},
 }
 
 @article{Fischer2021,
+  selected={true},
 	author = {Fischer, Bennet and Chemnitz, Mario and MacLellan, Benjamin and Roztocki, Piotr and Helsten, Robin and Wetzel, Benjamin and Little, Brent and Chu, Sai and Moss, David J. and Aza{\~{n}}a, Jos{\'{e}} and Morandotti, Roberto},
 	title = {Autonomous on-chip interferometry for reconfigurable optical waveform generation},
 	doi = {10.1364/OPTICA.435435},
@@ -112,67 +109,78 @@ year = {2018}
 	month = {sep},
 	issue = {10},
 	pages = {1268-1276},
-	url = {https://opg.optica.org/optica/fulltext.cfm?uri=optica-8-10-1268&id=459971},
+	html = {https://opg.optica.org/optica/fulltext.cfm?uri=optica-8-10-1268&id=459971},
 	volume = {8},
 	year = {2021}
 }
 
 
 @article{Cameron2023,
-  title = {Ultrafast measurement of energy-time entanglement with an optical Kerr shutter},
-  volume = {108},
-  ISSN = {2469-9934},
-  url = {http://dx.doi.org/10.1103/PhysRevA.108.L041503},
-  DOI = {10.1103/physreva.108.l041503},
-  number = {4},
-  journal = {Physical Review A},
-  publisher = {American Physical Society (APS)},
-  author = {Cameron,  Andrew R. and Fenwick,  Kate L. and Cheng,  Sandra W. L. and Schwarz,  Sacha and MacLellan, Benjamin and Bustard,  Philip J. and England,  Duncan and Sussman,  Benjamin and Resch,  Kevin J.},
-  year = {2023},
-  month = oct 
+      title = {Ultrafast measurement of energy-time entanglement with an optical Kerr shutter},
+      volume = {108},
+      ISSN = {2469-9934},
+      html = {http://dx.doi.org/10.1103/PhysRevA.108.L041503},
+      arxiv = {2305.14498},
+      DOI = {10.1103/physreva.108.l041503},
+      number = {4},
+      journal = {Physical Review A},
+      publisher = {American Physical Society (APS)},
+      author = {Cameron,  Andrew R. and Fenwick,  Kate L. and Cheng,  Sandra W. L. and Schwarz,  Sacha and MacLellan, Benjamin and Bustard,  Philip J. and England,  Duncan and Sussman,  Benjamin and Resch,  Kevin J.},
+      year = {2023},
+      month = oct 
 }
 
 @article{Fischer2023,
-  title = {Neuromorphic computing via fission‐based broadband frequency generation},
-  ISSN = {2198-3844},
-  url = {http://dx.doi.org/10.1002/advs.202303835},
-  DOI = {10.1002/advs.202303835},
-  journal = {Advanced Science},
-  publisher = {Wiley},
-  author = {Fischer,  Bennet and Chemnitz,  Mario and Zhu,  Yi and Perron,  Nicolas and Roztocki,  Piotr and MacLellan, Benjamin and Di Lauro,  Luigi and Aadhi,  A. and Rimoldi,  Cristina and Falk,  Tiago H. and Morandotti,  Roberto},
-  year = {2023},
-  month = oct 
+      title = {Neuromorphic computing via fission‐based broadband frequency generation},
+      ISSN = {2198-3844},
+      url = {http://dx.doi.org/10.1002/advs.202303835},
+      DOI = {10.1002/advs.202303835},
+      journal = {Advanced Science},
+      publisher = {Wiley},
+      author = {Fischer,  Bennet and Chemnitz,  Mario and Zhu,  Yi and Perron,  Nicolas and Roztocki,  Piotr and MacLellan, Benjamin and Di Lauro,  Luigi and Aadhi,  A. and Rimoldi,  Cristina and Falk,  Tiago H. and Morandotti,  Roberto},
+      year = {2023},
+      month = oct 
 }
 
 @article{ghanbari2024optimization,
+      selected={true},
       title={Optimization of deterministic photonic graph state generation via local operations}, 
       author={Sobhan Ghanbari and Jie Lin and MacLellan, Benjamin and Luc Robichaud and Piotr Roztocki and Hoi-Kwong Lo},
       year={2024},
-      eprint={2401.00635},
+      arxiv={2401.00635},
       month={January},
       archivePrefix={arXiv},
       primaryClass={quant-ph}
 }
 
 @article{lin2024graphiq,
-      selected={true},
       title={GraphiQ: Quantum circuit design for photonic graph states}, 
       author={Jie Lin and MacLellan, Benjamin and Sobhan Ghanbari and Julie Belleville and Khuong Tran and Luc Robichaud and Roger G. Melko and Hoi-Kwong Lo and Piotr Roztocki},
       year={2024},
       month={February},
-      eprint={2402.09285},
+      arxiv={2402.09285},
       archivePrefix={arXiv},
       primaryClass={quant-ph}
 }
 
 @article{AESOP2024,
-  selected={true},
-  author = {MacLellan, Benjamin and Roztocki, Piotr and Belleville, Julie and Romero Cortés, Luis and Ruscitti, Kaleb and Fischer, Bennet and Azaña, José and Morandotti, Roberto},
-  title = {Inverse design of photonic systems},
-  journal = {Laser \& Photonics Reviews},
-  year={2024},
-  pages = {2300500},
-  month={February},
-  doi = {doi.org/10.1002/lpor.202300500},
+      selected={true},
+      author = {MacLellan, Benjamin and Roztocki, Piotr and Belleville, Julie and Romero Cortés, Luis and Ruscitti, Kaleb and Fischer, Bennet and Azaña, José and Morandotti, Roberto},
+      title = {Inverse design of photonic systems},
+      journal = {Laser \& Photonics Reviews},
+      year={2024},
+      pages = {2300500},
+      month={February},
+      doi = {doi.org/10.1002/lpor.202300500},
+      html = {https://onlinelibrary.wiley.com/doi/10.1002/lpor.202300500}
 }
 
+@misc{maclellan2024endtoend,
+      selected={true},
+      title={End-to-end variational quantum sensing}, 
+      author={Benjamin MacLellan and Piotr Roztocki and Stefanie Czischek and Roger G. Melko},
+      year={2024},
+      arxiv={2403.02394},
+      archivePrefix={arXiv},
+      primaryClass={quant-ph}
+}
