--- a/_news/2024-03-vqs.md
+++ b/_news/2024-03-vqs.md
@@ -5,4 +5,4 @@ inline: true
 related_posts: false
 ---
 
-I'm excited to announce the publication of recent work on an end-to-end design framework for variational quantum sensing. Check out the paper on the [arXiv](https://arxiv.org/abs/2403.02394)!
+I'm excited to announce the publication of recent work on an end-to-end design framework for variational quantum sensing. Check out the paper on the [arXiv:2403.02394](https://arxiv.org/abs/2403.02394)! I presented the work at APS March Meeting 2024 in Minneapolis.
