--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -184,3 +184,13 @@ year = {2018}
       archivePrefix={arXiv},
       primaryClass={quant-ph}
 }
+
+@misc{fitzek2024rydberggpt,
+      title={RydbergGPT}, 
+      author={David Fitzek and Yi Hong Teoh and Hin Pok Fung and Gebremedhin A. Dagnew and Ejaaz Merali and M. Schuyler Moss and Benjamin MacLellan and Roger G. Melko},
+      year={2024},
+      eprint={2405.21052},
+      archivePrefix={arXiv},
+      primaryClass={quant-ph},
+      url={https://arxiv.org/abs/2405.21052}, 
+}
