--- a/_news/2024-10-31-oqd-repos.md
+++ b/_news/2024-10-31-oqd-repos.md
@@ -6,7 +6,7 @@ related_posts: false
 ---
 
 [Open Quantum Design](https://openquantumdesign.org/) has now open-sourced our first set of software repos as part of our mission to build the world's first open-source quantum computer. 
-Check out [`Equilux`](https://github.com/OpenQuantumDesign/equilux) on Github, which 
+Check out [`equilux`](https://github.com/OpenQuantumDesign/equilux) on Github, which 
 includes [interfaces](https://github.com/OpenQuantumDesign/oqd-core) for programming quantum computers at analog and atomic layers,
 [compiler infrastructure](https://github.com/OpenQuantumDesign/oqd-compiler-infrastructure),
 [cloud provider tools](https://github.com/OpenQuantumDesign/oqd-cloud),
